Fix text align

--- a/food_intake.css
+++ b/food_intake.css
@@ -44,7 +44,6 @@ body {
   text-decoration: none;
 }
 
-
 .bell-acc-icon a:hover {
   color: #2e7d32; /* hover 시 색상 유지 */
   text-decoration: none; /* hover 시 밑줄 제거 */
@@ -68,8 +67,6 @@ body {
   background-color: rgb(237, 242, 225);
 } */
 
-
-
 /* Slide Menu */
 .slide-menu {
   height: 100%;
@@ -82,6 +79,7 @@ body {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  text-align: left;
 }
 
 .slide-menu a {
@@ -235,7 +233,6 @@ body {
   }
 } */
 
-
 /* header finish---------------- */
 
 /* bell, acc_icon */
@@ -257,7 +254,7 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.side_menu_button:hover{
+.side_menu_button:hover {
   color: #2e7d32;
 }
 
@@ -328,7 +325,7 @@ button {
 
 .input-group button:hover,
 button:hover {
-  background-color:#2e7d32 
+  background-color: #2e7d32;
 }
 
 /* 로그 스타일 */
